src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>RDS_Budget__c</fullName>
        <label>Budget Range</label>
        <picklist>
            <picklistValues>
                <fullName>Below 1 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 2 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 5 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Cr &amp; above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Print Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoardings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Consultancy_Name__c</fullName>
        <label>Consultancy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Consultant_Name__c</fullName>
        <label>Consultant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_Country_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <controllingField>RDS_Country__c</controllingField>
            <picklistValues>
                <fullName>+61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+852</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+86</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+91</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>+971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+355</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-684</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+376</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+244</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-264</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+672</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-268</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+374</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+297</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-242</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+880</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-246</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+375</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+501</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+229</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1-441</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+975</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zeland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email RDS</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RDS_Intention__c</fullName>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Aarey Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agripada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alibag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altamount Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambernath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambivali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amboli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri-Kurla Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anu Shakti Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asangaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August Kranti Marg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayodhya Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azad Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babulnath Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badlapur West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra Kurla Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandra West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangur Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bari Wada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behram Baug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellasis Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverly park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhadane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhandup East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Mobile__c</fullName>
        <externalId>true</externalId>
        <label>Mobile RDS</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RDS_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Reason_for_Manual_qualification__c</fullName>
        <label>Reason For Manual Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Didn’t share the details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High call volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal reference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Reason_for_Ownership_Change__c</fullName>
        <label>Reason For Ownership Change</label>
        <picklist>
            <picklistValues>
                <fullName>Long leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shifted from the project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gestation period over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_Reference_Name__c</fullName>
        <label>Reference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Unit_type_configuration__c</fullName>
        <label>Unit Type/ Configuration</label>
        <picklist>
            <controllingField>Requirement__c</controllingField>
            <picklistValues>
                <fullName>Studio Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RND_Timeline__c</fullName>
        <label>Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>Within a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 6 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Estate Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_unclear_Prospect__c</fullName>
        <label>Reason For Lost</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Choice of inventory not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer interested in ready properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project not in the preferred locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timelines don’t match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location not prefered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require early possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require delayed possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non contactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired configuration unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment size small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquired by mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not enquire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already invested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor enquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_on_Qualification__c</fullName>
        <label>Reason On Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Didn’t share the details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High call volume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasons_for_closed_Lost__c</fullName>
        <label>Reasons For Closed (Lost)</label>
        <picklist>
            <picklistValues>
                <fullName>Beyond Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less/more Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluating Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vastu Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Elsewhere</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads (Reference Lead)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Mobile__c</fullName>
        <label>Reference Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Descriptive Remarks / Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Repeat_Visit__c</fullName>
        <label>Repeat Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Outright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirment__c</fullName>
        <label>Requirment</label>
        <picklist>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pent House</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rera_No_If_Broker_Cp__c</fullName>
        <label>Rera No (If Broker/Cp)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Locality__c</fullName>
        <label>Residential Locality</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_State_Province__c</fullName>
        <label>State/Province</label>
        <picklist>
            <controllingField>Country_R__c</controllingField>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residential_Street__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residential_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code (R)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Respective_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respective Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Respective Customer Account)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMSDateTIme__c</fullName>
        <label>SMS Date TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMSSendTo__c</fullName>
        <label>SMS Send To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Designation_Category__c</fullName>
        <label>Designation Category</label>
        <picklist>
            <controllingField>Designation__c</controllingField>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Name_Of_PSC__c</fullName>
        <label>Name Of PSC</label>
        <picklist>
            <picklistValues>
                <fullName>Aakash Goswami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abhishek Chavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Sayyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ajaykumar Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akash Jaiswal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akila Rawji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aklesh Pandey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anish Panjwani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabinda Swain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aradhana Acharya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arun Rao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asim Khan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhaskar Kanchan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brinston Rodgrigues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chetan Shiroor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deepak Thakur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deepti Tiwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimpi Jha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinu Gopi Achary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divya Mange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulari Shaikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durgesh Pandey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eram Siddiqui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firoz Shaikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gavian Fernandes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harshad Bhatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harsh Dani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heena Rajpal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagdeep Singh Jaswant Singh Gill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>